<resources>
    <string name="app_name">移动图书馆</string>

    <!-- dialog -->
    <string name="dialog_request_failed_title">请求失败</string>
    <string name="dialog_prompt_title">提示</string>
    <string name="dialog_button_login">登录</string>
    <string name="dialog_button_retry">重试</string>
    <string name="dialog_button_confirm">确认</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="dialog_button_exit">退出</string>
    <string name="dialog_confirm_title">请确认</string>
    <string name="dialog_confirm_quit">是否确认退出？</string>
    <string name="dialog_confirm_none_school">未选择学校，请重新选择</string>
    <string name="dialog_loading_failed">加载失败，请点击确认后重试</string>
    <string name="dialog_confirm_select_school">是否确认重新选择学校？</string>
    <string name="dialog_confirm_relogin">当前已经登录，是否注销后重新登录？</string>
    <string name="dialog_none_school_version">您选择的学校没有开通移动图书馆服务，点击确认后重新选择学校</string>
    <string name="dialog_confirm_remove_module">是否确认移除：%s</string>
    <string name="dialog_confirm_remove_success">移除成功！</string>
    <string name="dialog_confirm_remove_failed">移除失败！</string>
    <string name="dialog_confirm_back_to_list">学校信息为空，请返回学校</string>
    <string name="dialog_request_failed_message">版本信息获取失败，请检查网络后重试</string>

    <!-- title -->
    <string name="title_login">登录</string>
    <string name="title_main_with_school_name">%s移动图书馆</string>
    <string name="title_main">移动图书馆</string>

    <!-- menu -->
    <string name="menu_skip_login">跳过登录</string>
    <string name="menu_select_school">选择学校</string>
    <string name="menu_login">登录</string>
    <string name="menu_quit">退出</string>
    <string name="menu_add_module">添加服务</string>
    <string name="menu_scan">扫描</string>

    <!-- login -->
    <string name="login_success">登录成功！</string>

    <!-- school_list.xml -->
    <string name="school_list_select_school">请选择所在院校</string>
    <string name="school_list_request_failed_message">学校列表获取失败，请检查网络后重试</string>
    <string name="module_list_request_failed_message">模块列表获取失败，请检查网络后重试</string>
    <string name="version_info_request_failed_message">版本信息获取失败，请检查网络后重试</string>

    <!-- main_layout -->
    <string name="login_status_ok">当前登录用户：%s</string>
    <string name="login_status_none">未登录</string>
    <string name="select_module">选择您感兴趣的模块</string>
    <string name="menu_subscribe">订阅</string>
    <string name="menu_unsubscribe">取消订阅</string>
    <string name="refresh">刷新</string>
    <string name="actionbar_tab_lib_service">服务</string>
    <string name="actionbar_tab_my_lib">我的图书馆</string>
    <string name="actionbar_tab_settings">设置</string>
    <string name="empty_text_add_new_module">请点击“添加服务”增加新的服务</string>
    <string name="loading_text">正在加载&#8230;</string>

    <!--Setting-->
    <string name="setting_forbid_mobile_net">3G/2G网络禁止</string>
    <string name="setting_download_image_text">下载图片</string>
    <string name="setting_clear_cache">清空缓存</string>
    <string name="setting_beginner_guide">新手引导</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_about">关于</string>
    <string name="setting_version_check">版本检测</string>
    <string name="setting_current_version_info">当前版本：</string>
    <string name="setting_logout">安全退出</string>
    <string name="setting_logout_txt">当前登录账号：</string>
    <string name="no_version_update">当前已为最新版本，无需更新!!!</string>
    <string name="has_version_update">有版本更新，点击确定按钮更新!!!</string>
    <string name="version_download_suc">新版本下载成功，若安转，点击确定按钮安装!!!</string>
    <string name="confirm_to_logout">确认退出当前登录？</string>
    <string name="wifi_is_disconnected">网络未连接，请检查网络连接状况</string>

    <!--Feedback-->
    <string name="content_text_empty">请输入内容!!</string>
    <string name="email_text_empty">请输入邮箱地址!!</string>
    <string name="error_email_address">邮箱地址错误，请重新输入!!!</string>

    <!--about-->
    <string name="about_version_name">V</string>
    <string name="about_can_not_find_version_name">找不到版本信息!!!</string>

    <!--myDownload-->
    <string name="my_download_title">我的下载</string>
    <string name="actionbar_tab_e_book">电子书</string>
    <string name="actionbar_tab_magazine">期刊</string>
    <string name="actionbar_tab_literature">文献</string>
    <string name="file_cannot_open">文件不能打开，请下载相关软件！</string>

    <!--scan-->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan_title">扫描二维码</string>
    <string name="scan_failed">扫描失败，请重试!!</string>

    <!--EBookDetails-->
    <string name="e_book_page_title">书籍详情</string>
    <string name="e_book_author">作者：</string>
    <string name="e_book_publisher">出版社：</string>
    <string name="e_book_time">出版日期：</string>
    <string name="e_book_btn_text_download">下载电子书</string>
    <string name="e_book_btn_text_open">打开</string>
    <string name="e_book_download_success">电子书下载成功!!</string>

    <!--magazine_introduce-->
    <string name="magazine_introduce_text_name">刊名</string>
    <string name="magazine_introduce_text_press">出版地</string>
    <string name="magazine_introduce_text_issn">ISSN</string>
    <string name="magazine_introduce_text_time">创刊时间</string>

    <!--magazine_details-->
    <string name="magazine_details_page_title">期刊详情</string>
    <string name="magazine_details_text_introduce">简介</string>
    <string name="magazine_details_text_periods">期数</string>

    <!--demo_data-->
    <string name="demo_data_str">新书通报：周易本义、超验主义对儒家思想的接受研究、康德说道德与人性等书已到馆，欢迎同学借阅！！！</string>
    <string name="require_install_apk">应用未安装，赶快下载安装吧！</string>
</resources>
