<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/magazine_introduce_text_width"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:gravity="end"
            android:text="@string/magazine_introduce_text_name"/>

        <TextView
            android:id="@+id/magazine_introduce_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/magazine_introduce_text_width"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_margin="10dp"
            android:text="@string/magazine_introduce_text_press"/>

        <TextView
            android:id="@+id/magazine_introduce_press"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/magazine_introduce_text_width"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_margin="10dp"
            android:text="@string/magazine_introduce_text_issn"/>

        <TextView
            android:id="@+id/magazine_introduce_issn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="@dimen/magazine_introduce_text_width"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="end"
            android:layout_margin="10dp"
            android:text="@string/magazine_introduce_text_time"/>

        <TextView
            android:id="@+id/magazine_introduce_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>