<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/e_book_details_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/e_book_details_img"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/e_book_details_img"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/e_book_details_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="卧底麦当劳"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="16sp"
                    android:text="@string/e_book_author"/>

                <TextView
                    android:id="@+id/e_book_details_author"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/e_book_author"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="16sp"
                    android:text="@string/e_book_publisher"/>

                <TextView
                    android:id="@+id/e_book_details_publisher"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/e_book_publisher"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="16sp"
                    android:text="@string/e_book_time"/>

                <TextView
                    android:id="@+id/e_book_details_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/e_book_time"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/e_book_details_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/e_book_details_info_layout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/e_book_details_download_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:layout_centerInParent="true"
            android:text="@string/e_book_btn_text_download"/>

        <ProgressBar
            android:id="@+id/e_book_details_download_progressbar"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:progress="0"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/e_book_details_download_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="24sp"
            android:textColor="@color/red"
            android:text="aaaaa"
            android:visibility="gone"/>

        <Button
            android:id="@+id/e_book_details_open_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:layout_centerInParent="true"
            android:text="@string/e_book_btn_text_open"
            android:visibility="gone"/>

    </RelativeLayout>
</RelativeLayout>